djvu: Use dpi of pages to compute scaling factor

https://bugzilla.gnome.org/show_bug.cgi?id=580891